[gd_scene load_steps=5 format=2]

[ext_resource path="res://GridSelector.gd" type="Script" id=1]
[ext_resource path="res://grid_selector_shader.tres" type="Shader" id=2]
[ext_resource path="res://assert/3x5.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/alpha = 1.0

[node name="Grid" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
material = SubResource( 1 )
margin_right = 100.0
margin_bottom = 204.0
texture = ExtResource( 3 )

[node name="L3x5" type="TextureButton" parent="."]
visible = false
margin_left = 167.0
margin_top = 173.0
margin_right = 265.0
margin_bottom = 369.0
texture_normal = ExtResource( 3 )

[node name="L4x6" type="TextureButton" parent="."]
visible = false
margin_left = 420.0
margin_top = 173.0
margin_right = 518.0
margin_bottom = 369.0
texture_normal = ExtResource( 3 )

[node name="L4x4" type="TextureButton" parent="."]
margin_left = 108.0
margin_top = 175.0
margin_right = 210.0
margin_bottom = 371.0
rect_scale = Vector2( 2, 1 )
texture_normal = ExtResource( 3 )

[node name="L5x5" type="TextureButton" parent="."]
margin_left = 430.0
margin_top = 179.0
margin_right = 528.0
margin_bottom = 375.0
rect_scale = Vector2( 2, 1 )
texture_normal = ExtResource( 3 )

[node name="L6x6" type="TextureButton" parent="."]
margin_left = 108.0
margin_top = 540.0
margin_right = 206.0
margin_bottom = 736.0
rect_scale = Vector2( 2, 1 )
texture_normal = ExtResource( 3 )

[node name="L8x8" type="TextureButton" parent="."]
margin_left = 430.0
margin_top = 548.0
margin_right = 528.0
margin_bottom = 744.0
rect_scale = Vector2( 2, 1 )
texture_normal = ExtResource( 3 )

[connection signal="pressed" from="L3x5" to="." method="_on_L3x5_pressed"]
[connection signal="pressed" from="L4x6" to="." method="_on_L4x6_pressed"]
[connection signal="pressed" from="L4x4" to="." method="_on_L4x4_pressed"]
[connection signal="pressed" from="L5x5" to="." method="_on_L5x5_pressed"]
[connection signal="pressed" from="L6x6" to="." method="_on_L6x6_pressed"]
[connection signal="pressed" from="L8x8" to="." method="_on_L8x8_pressed"]
